input alignment fixed

--- a/resources/assets/sass/front.scss
+++ b/resources/assets/sass/front.scss
@@ -177,6 +177,8 @@ table#Competition-modal-table {
 
 
 
+
+
 /*.pitch_planner_section {
   height: 1200px;
 }
@@ -586,36 +588,42 @@ input[type=number] {
 }
 
 .colorpicker {
-  z-index: 99999;
+    z-index: 99999;
 }
 
 //Styles added to show Horizontal Scroll Bar
 .fc-view-container {
-  width: auto;
+    width: auto;
 }
+
 .fc-view-container .fc-view {
-  overflow-x: scroll;
+    overflow-x: scroll;
 }
-.fc-view-container .fc-view > table {
-  width: 760px;
+
+.fc-view-container .fc-view>table {
+    width: 760px;
 }
-.fc-view-container .fc-view.fc-timelineDay-view > table {
-  width: 760px !important;
+
+.fc-view-container .fc-view.fc-timelineDay-view>table {
+    width: 760px !important;
 }
+
 .fc-view-container .fc-view.fc-timelineDay-view {
-  overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 label.error {
-  color: #ff3860;
+    color: #ff3860;
 }
+
+
 
 /*.fc-event {
   border: none;
 }*/
 
 .fc-time-grid-event .fc-content {
-  padding: 1px;
+    padding: 1px;
 }
 
 .custom-d-flex {
@@ -631,9 +639,25 @@ label.error {
     border-radius: 50%;
     color: red;
     background: #fff;
-    border: 1px solid rgba(0,0,0,.1);
-    -webkit-box-shadow: 7px 10px 21px -13px rgba(0,0,0,0.29);
-    -moz-box-shadow: 7px 10px 21px -13px rgba(0,0,0,0.29);
-    box-shadow: 3px 7px 14px -7px rgba(0,0,0,0.39);
-    display:none;
+    border: 1px solid rgba(0, 0, 0, .1);
+    -webkit-box-shadow: 7px 10px 21px -13px rgba(0, 0, 0, 0.29);
+    -moz-box-shadow: 7px 10px 21px -13px rgba(0, 0, 0, 0.29);
+    box-shadow: 3px 7px 14px -7px rgba(0, 0, 0, 0.39);
+    display: none;
+}
+
+.multiselect__tags {
+    padding: $btn-padding-y $btn-padding-y*2;
+    .multiselect__input,
+    .multiselect__single {
+        margin-bottom: 0;
+        padding: 0;
+        width: auto;
+    }
+}
+
+.multiselect,
+.multiselect__input,
+.multiselect__single {
+    font-size: 15px;
 }
